GearsetPOC/force-app/main/default/objects/SalesforceTicketLink__x/SalesforceTicketLink__x.object-meta.xml
<CustomObject>
    <description>SalesforceTicketLink</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceTicketLink</externalName>
    <label>Salesforce ticket link</label>
    <pluralLabel>Salesforce ticket links</pluralLabel>
</CustomObject>