GearsetPOC/force-app/main/default/objects/SalesforceTicketLink__x/fields/IsManualCheckIn__c.field-meta.xml
<CustomField>
    <fullName>IsManualCheckIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsManualCheckIn</description>
    <externalDeveloperName>IsManualCheckIn</externalDeveloperName>
    <label>Is manual check in</label>
    <type>Checkbox</type>
</CustomField>