GearsetPOC/force-app/main/default/objects/SalesforceTicketLink__x/fields/TypeCode__c.field-meta.xml
<CustomField>
    <fullName>TypeCode__c</fullName>
    <description>TypeCode</description>
    <externalDeveloperName>TypeCode</externalDeveloperName>
    <label>Type code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>