GearsetPOC/force-app/main/default/objects/SalesforceTicketLink__x/fields/TypeDescription__c.field-meta.xml
<CustomField>
    <fullName>TypeDescription__c</fullName>
    <description>TypeDescription</description>
    <externalDeveloperName>TypeDescription</externalDeveloperName>
    <label>Type description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>